--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,14 +43,8 @@ h3 {
 	font-size:24px; 
 	}
 
-/*.dashes{ 
-	height:40px;
-	width:40px;
-	float:left;
-	margin-right:10px;
-	background-color:white;
+#dashes{ 
+	
 	text-align:center;
 	font-size:24px;
-	olor:#333;
-	padding-top:5px;
-} */
+	}
